# backend/docs/swagger.json
@@ -1068,6 +1068,63 @@
                     }
                 }
             }
+        },
+        "/portfolio/add": {
+            "get": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Portfolio"
+                ],
+                "summary": "Портфели пользователя",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.PortfolioStats"
+                        }
+                    }
+                }
+            }
+        },
+        "/portfolio/all-stats": {
+            "get": {
+                "security": [
+                    {
+                        "Auth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Portfolio"
+                ],
+                "summary": "Портфели пользователя",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.PortfolioStats"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -1403,6 +1460,35 @@
                 },
                 "portfolio": {
                     "$ref": "#/definitions/model.Portfolio"
+                }
+            }
+        },
+        "model.PortfolioStats": {
+            "type": "object",
+            "properties": {
+                "active": {
+                    "type": "boolean"
+                },
+                "assetAmount": {
+                    "type": "integer"
+                },
+                "assetQuantity": {
+                    "type": "integer"
+                },
+                "currencyDesc": {
+                    "type": "string"
+                },
+                "currencyId": {
+                    "type": "string"
+                },
+                "currencyTitle": {
+                    "type": "string"
+                },
+                "portfolioId": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         },
